[tool.poetry]
name = "ahc019"
version = "0.1.0"
description = ""
authors = ["__ukun617 <11371960+hal0taso@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
polars = "^0.16.17"
matplotlib = "^3.7.1"
optuna = "^3.1.0"
seaborn = "^0.12.2"
numpy = "^1.24.2"
joblib = "^1.2.0"
jupyterlab = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
